--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,14 @@ dependencies {
     // FireBase
     implementation platform('com.google.firebase:firebase-bom:32.5.0')
     implementation 'com.google.firebase:firebase-analytics'
-    // FireBase Auth
+
+    // FireBase Auth library
     implementation("com.google.firebase:firebase-auth")
-    // FireStore
+
+    // Cloud FireStore library
     implementation("com.google.firebase:firebase-firestore")
+
+    // Cloud Storage library
+    implementation ("com.google.firebase:firebase-storage")
+
 }
