--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation("com.google.firebase:firebase-auth")
     // FireStore
     implementation("com.google.firebase:firebase-firestore")
+    // FireBase Storage
+    implementation("com.google.firebase:firebase-storage")
 }
