--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:theme="@style/Theme.GroupPurchaseSystem"
         tools:targetApi="31">
         <activity
-            android:name=".PostActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -25,6 +22,11 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".PostActivity"
+            android:exported="false" />
+        <activity android:name=".Object_Category" />
+        <activity android:name=".Major_Category" />
+
     </application>
 
 </manifest>
