--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // FireBase
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation platform('com.google.firebase:firebase-bom:32.5.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
     // FireBase Auth
     implementation("com.google.firebase:firebase-auth")
     // FireStore
